itis3135/styles/arrays.css
/* For arrays.html */
body {
    margin: 40px;
}

table {
    width: 50%;
    border-collapse: collapse;
    margin-top: 20px;
    margin-left: auto;
    margin-right: auto;
    display: none;
}

table,
th,
td {
    border: 1px solid midnightblue;
}

th,
td {
    padding: 8px;
    text-align: left;
}

#results {
    text-align: center;
    margin-top: 20px;
    font-weight: bold;
}

#results h2 {
    color: #333;
}

#results p {
    margin-bottom: 10px;
}

